@@ -1,13 +1,13 @@
 {
-        might_have: {
-            fetch: 0
+        "might_have": {
+            "fetch": 0
         },
-        has_many: {
-            fetch: 0
+        "has_many": {
+            "fetch": 0
         },
-        sets: [{
-            class: 'Track',
-            ids: ['9']
+        "sets": [{
+            "class": "Track",
+            "ids": ["9"]
         }],
-        datetime_relative : "2007-10-30 00:00:00"  
+        datetime_relative : "2007-10-30 "00":"00":00"  
 }
