@@ -1,15 +1,15 @@
 {
-        might_have: {
-            fetch: 0
+        "might_have": {
+            "fetch": 0
         },
-        has_many: {
-            fetch: 0
+        "has_many": {
+            "fetch": 0
         },
-        sets: [{
-            class: 'Producer',
-            quantity: 1
+        "sets": [{
+            "class": "Producer",
+            "quantity": 1
         }],
-        includes: [{
-            file: 'simple.json'
+        "includes": [{
+            "file": "simple.json"
         }]
 }
