@@ -1,12 +1,12 @@
 {
-        might_have: {
-            fetch: 0
+        "might_have": {
+            "fetch": 0
         },
-        has_many: {
-            fetch: 0
+        "has_many": {
+            "fetch": 0
         },
-        sets: [{
-            class: 'CD',
-            quantity: 3
+        "sets": [{
+            "class": "CD",
+            "quantity": 3
         }]
 }
