@@ -1,28 +1,28 @@
 {
-        might_have: {
-            fetch: 0
+        "might_have": {
+            "fetch": 0
         },
-        has_many: {
-            fetch: 0
+        "has_many": {
+            "fetch": 0
         },
-        sets: [{
-            class: 'CD',
-            ids: ['5']
+        "sets": [{
+            "class": "CD",
+            "ids": ["5"]
         }, {
-            class: 'Artist',
-            ids: ['1'],
-            fetch: [{
-                rel: cds,
-                quantity: all
+            "class": "Artist",
+            "ids": ["1"],
+            "fetch": [{
+                "rel": "cds",
+                "quantity": "all"
             }]
         }],
-        rules: {
-            'CD': {
-                cond: [{ 'tags.tag': 'Cheesy' }],
-                join: ['tags'],
-                fetch: [{
-                    rel: tracks,
-                    cond: { position: 2 }
+        "rules": {
+            "CD": {
+                "cond": [{ "tags.tag": "Cheesy" }],
+                "join": ["tags"],
+                "fetch": [{
+                    "rel": "tracks",
+                    "cond": { "position": 2 }
                 }]
             }                    
         }
