@@ -1,5 +1,7 @@
 Revision history for DBIx-Class-Fixtures
 
+- Fix t/var/configs/*.json to use valid JSON syntax
+
 1.001002
 - Allow passing schema object to ->populate
 - Check that fixture population dir was created
